# PyProjObfuscator

./: PKG-INFO  README.md  setup.cfg  setup.py
PyProjObfuscator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
obfuscate_command/: obfuscate.py
src/: obfuscator.c
