[metadata]
description-file = README.md
name = PyProjObfuscator-elshadaghazade
author = Elshad Aghazade
author_email = info@elshadaghazade.com
description = PyProjObfuscator is for obfuscating any type of Python projects. It protects your source codes from copyright violation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elshadaghazade/PyProjObfuscator
project_urls = 
	Bug Tracker = https://github.com/elshadaghazade/PyProjObfuscator/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Development Status :: 3 - Alpha

[egg_info]
tag_build = 
tag_date = 0

